--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -23,7 +23,8 @@
 		if(obj.attr("id")=="q_department_id_eq")
 			clean_input($("#text_div"));
 		
-		$('#course_detail_search').submit();
+		//$('#course_detail_search').submit();
+		$("form").submit();
 	}
 	$(document).ready(function(){
 		change_degree($("#degree"));
