fix search and sem

--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -28,6 +28,6 @@
 	}
 	$(document).ready(function(){
 		change_degree($("#degree"));
-		//$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
+		$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
 	});
 </script>
