course_maps credit_lists

--- a/app/views/user/_xtmpl_common_check.html.erb
+++ b/app/views/user/_xtmpl_common_check.html.erb
@@ -1,5 +1,5 @@
 <script type="text/x-tmpl" id="common_check">
-{% var result=get_check_res(o.pass_score,o.last_sem_id,o.user_courses.success); %}
+{% var result=commonCheck(o.pass_score,o.last_sem_id,o.user_courses.success); %}
 
 	
 <table class="table table-bordered "style="border:0px">
