--- a/app/views/user/this_sem.html.erb
+++ b/app/views/user/this_sem.html.erb
@@ -47,7 +47,17 @@
 			$("#course-container").html(tmpl("cos_type_list", data));
 			//console.log(data);
 		});
+		//ggg();
 	});
+	function ggg(){
+		var gg={a:{}};
+		fff(gg);
+		console.log(gg);
+	}
+	function fff(gg){
+		gg["b"]=5;
+		
+	}
 </script>
 
 <%=render :partial=>"xtmpl_list_by_costype"%>
