--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -28,6 +28,9 @@ $(document).ready(function(){
 
 		if(data["course_map"]){
 			$("#cosmap_check_div").html(tmpl("cosmap_check",data));
+			/*var cm=o.course_map,user_courses=o.user_courses.success;
+			var pass_courses=get_pass_courses(o.pass_score,o.last_sem_id,user_courses);
+			parse_cf_tree(cm.cfs,pass_courses,cm.max_colspan);*/
 		}
 		$("#course_list").html(tmpl("list_by_cosmap",data));
 
