--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-      <a class="navbar-brand " href="<%=root_url%>" style="font-family:arial;">NCTU<sup>+</sup></a>
+      <a class="navbar-brand " href="/main/index" style="font-family:arial;">NCTU<sup>+</sup></a>
 
 		</div>
 
