change index text from life  to campus XD

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 ﻿<div class="container" style="position:absolute; top: 50px;z-index:200;">
 		<div class="col-md-8 col-md-offset-1" style="/*height:300px; background-color:black;*/">
 			<p style="color:white; font-size:82px; font-weight:bold;font-family:Arial; display:inline-block;">NCTU<sup>+</sup></p>
-			<p style="color:white; font-size:46px; font-weight:bold;display:inline-block;">交大智慧生活系統</p>
+			<p style="color:white; font-size:46px; font-weight:bold;display:inline-block;">交大智慧校園系統</p>
 		</div>
 </div>
 
