--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -33,7 +33,7 @@
 
 <table class="table table-hover table-bordered bg-white-transparent" id="course_table" >
 	<tr class="row">
-		<th class="col-md text-center" style="width:70px;"><%= sort_link @q,:semester_id, "學期" %></th>
+		<th class="col-md text-center" style="width:70px;">學期</th>
 		<th class="col-md-2 text-center">
 			<%= sort_link @q,:department_id, "系所" %> /
 			<%= sort_link @q,:brief, "摘要" %>
