--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 
 <%= image_tag(asset_path("head_1.jpg"), :id=>'bg1', :class=>"bg", :alt=>"NCTU+")%>
 
+
+	
 <div class="modal fade" id="global_modal" tabindex="-1" role="dialog" aria-hidden="true" >
 	<div class="modal-dialog" >
 		<div class="modal-content" ></div>
@@ -35,10 +37,11 @@
 
 
 
-<div id="content-contaier" class="container-fluid" style="margin-top:60px;" >
+<div id="content-contaier" class="container-fluid" style="margin-top:50px;" >
 	<div class="row">
-		<div id="content" class="col-md-12 col-md-offset-">
-			<div id="global_bgcolor" class="well global-background-color" >
+		<div id="content" class="col-md-12" style="padding-right:0px;">
+			
+			<div id="global_bgcolor" class="well global-background-color" style="margin-bottom:0px;" >
 				<%= yield %>
 			</div>
 		</div>
