--- a/app/assets/stylesheets/bootstrap-treeview.css
+++ b/app/assets/stylesheets/bootstrap-treeview.css
@@ -17,21 +17,21 @@
  * limitations under the License.
  * ========================================================= */
 
-.list-group-item {
+.treeview .list-group-item {
 	cursor: pointer;
 }
 
-span.indent {
+.treeview span.indent {
 	margin-left: 10px;
 	margin-right: 10px;
 }
 
-span.expand-collapse {
+.treeview span.expand-collapse {
 	width: 1rem;
 	height: 1rem;
 }
 
-span.icon {
+.treeview span.icon {
 	margin-left: 10px;
 	margin-right: 5px;
 }
