--- a/app/views/course_content/_scroll_sidebar.html.erb
+++ b/app/views/course_content/_scroll_sidebar.html.erb
@@ -1,10 +1,10 @@
-<div id="sidebar-menu" class="hidden-xs hidden-sm" style="font-size:16px;position:fixed;margin-top:100px;">
+<div id="sidebar-menu" class="scroll-sidebar hidden-xs hidden-sm" style="font-size:16px;position:fixed;margin-top:100px;">
 	<ul class=" nav nav-stacked affix main-menu">
 	<li><a href="#tc">課程資訊</a></li>
 	<ul class="nav sub-menu">
 		<li><a href="#statistics">歷年統計</a></li>
 		<li><a href="#course-tips">課程攻略</a></li>
-	<!--	<li><a href="#messages">留言板</a></li>  -->
+		<li><a href="#comments">留言板</a></li>
 	</ul>
 	
 	<li><a href="#compare">教授比一比</a></li>
@@ -23,38 +23,3 @@ $(document).ready(function() {
 	});
 });
 </script>
-
-
-<style>
-ul {
-    list-style-type: none;
-	padding: 0;
-}
-.active{
-	color: #11427D !important;
-	text-decoration: none;
-	background-color: transparent;
-	border-left: 5px solid #11427D;
-}
-#sidebar-menu .main-menu a {
-  display: block;
-	font-size: 16px;
-	font-weight: 500;
-	color: #000;
-	padding: 4px 20px;
-}
-#sidebar-menu .main-menu a:hover {
-	color: #11427D;
-	text-decoration: none;
-	background-color: transparent;
-	border-left: 5px solid #11427D;
-}
-
-#sidebar-menu .sub-menu a {
-	padding-top: 1px;
-	padding-bottom: 1px;
-	padding-left: 30px;
-	font-size: 14px;
-	font-weight: 400;
-}
-</style>
