--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,38 +1,23 @@
-<%= javascript_include_tag "course_content", "data-turbolinks-track" => true %>
-
+<%= javascript_include_tag asset_path("course_content"), "data-turbolinks-track" => true %>
+<%= javascript_include_tag asset_path("courses/chart"), "data-turbolinks-track" => true %>
+<%= javascript_include_tag asset_path("courses/main"), "data-turbolinks-track" => true %>
 <div class="row">
-	
 	<div class="col-md-9 scroll-content col-md-offset-1">
-		<div class="row">
+		<div class="row" id="tc" >
 			<div class="col-md-7">
-				<h1 class="scroll-title" id="course-name" data-offset="100">	
-					<%= @course.ch_name %>－
-					<% if @target_rank <=3 %>		
-						<small style="position: absolute;margin-top: -11px;margin-left: -8px;">
-							<%=image_tag "crown.svg", :class=>"svg-inject"%>
-						</small>
-						<style>
-							.crown-color{fill: <%=j rankTag(@target_rank)%>;}
-						</style>
-					<% end %>		
-					<%=@ct.teacher_name%>
+				<h1 class="scroll-title" data-offset="100">	
+					<%= @data[:course_name] %>－<%=@data[:course_teachers]%>
 				</h1>
 			</div>
 			<div class="col-md-5" id="teacher-name">
 				<span class="pull-right">
 					<br>
-					<% if @cds.last.semester_id==latest_semester.id %>
+					<% if @data[:open_on_latest] %>
 					
-					<button class="btn btn-md masterTooltip btn-primary" onclick="add_to_cart(<%=params[:id]%>,'add');" title="加至觀察名單" style="height:33px;margin-top:-1px">
+					<button class="btn btn-md masterTooltip btn-primary" onclick="add_to_cart(<%=j @data[:course_detail_id] %>,'add');" title="加至觀察名單" style="height:33px;margin-top:-1px">
 					<%= fa_icon "shopping-cart 1x"%><sup><%= fa_icon "plus 1x"%></sup>
 					</button>
 					&nbsp;
-					
-					<!--
-					<button class="btn btn-md btn-success masterTooltip" style="height:33px;margin-top:-1px" title="加選!" onclick="alert('Not done yet');">
-					<%= fa_icon "calendar 1x"%><sup><%= fa_icon "plus 1x"%></sup>
-					</button>
-					&nbsp;-->
 					<% end %>
 					<span style="display:inline-block">
 						<div class="share-course"></div>
@@ -42,34 +27,138 @@
 		</div>
 
 		<div class="row">
-			<div id="tc" class="well" style="">
-				<%= render :partial=> "show_teacherOnCourse" %>
+			<div class="well">
+				<h2 style="border-bottom:solid 1px;">課程資訊</h2>
+					<div class="panel-heading course-info">
+						<%=render "/course_content/course_info" %>
+					</div>
+ 				<div class="panel-heading" id="statistics">
+					<h2 class="panel-title">
+						<p id="statistics-header">
+							<%=fa_icon "align-left"%> 歷年統計：
+						</p>	
+					</h2>	
+				</div>
+				<div id="container-reg-num" style="height:80%; width:80%;"></div></br>
+				<div id="container-score" style="height:80%; width:80%;"></div>
+			
+			<div id="course-tips" class="panel-heading">
+				<h2 class="panel-title">
+					<p><%=fa_icon "gamepad"%> 課程攻略：</p>
+				</h2>	
 			</div>
+			<div class="panel-body">
+				<div class="well">
+					<div class="row" >
+						<%=fa_icon "cube"%> 作業/考試：
+						<%=link_to "編輯", "javascript:void(0);", :class=>"edit-head"%>	
+						</br></br>
+						<div id="course_content_head">
+							<%=loading_img%>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<%=fa_icon "cube"%> 其他內容：
+						<%=link_to "編輯", "javascript:void(0);", :class=>"edit-lists"%>	
+						</br></br>
+						<div id="course_content_lists">
+							<%=loading_img%>
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div id="course-tips" class="panel-heading">
+				<h2 class="panel-title">
+					<p>
+					<%=fa_icon "weixin"%> 留言板：
+					</p>
+				</h2>	
+			</div>
+			<div class="well backgorund-color-grey " id="comments"></div>
+		<% if current_user %>	
+			<div class="row comment-form" >
+				<div class="col-sm-1"></div>
+				<div class="col-sm-1">
+					<%=select_tag "comment_type",options_for_select([["推",1],["→",2],["噓",3]],"推"), :class=>"form-control"%>
+				</div>
+				<div class="col-sm-8">
+					<%=text_field_tag "comment_content", "", :class=>"form-control", :maxlength=>"32" %>
+				</div>
+				<div class="col-sm-1">
+					<%=button_tag "確定", :class=>"form-control btn btn-success comment-submit"%>
+				</div>
+			</div>
+		<% end %>	
+			</div>
+		</div>	
+		
+		<div class="row">
 			<div id="compare" class="well bs-callout" style="">
 			</div>
 			<div id="discuss" class="well bs-callout row" style="background-color:white;">
 			</div>
 			<div id="files" class="well bs-callout" style="background-color:white;">
 			</div>
+			
 		</div>
 	</div>
 	<div class="col-md-2 col-md-offset-">
-	<%= render "scroll_sidebar"%>
+	<%= render "/course_content/scroll_sidebar"%>
 	</div>
 </div>
 
 
 
 
-
+<%=render "/course_content/xtmpl/xtmpl_content_head"%>
+<%=render "/course_content/xtmpl/xtmpl_content_lists" %>
+<%=render "/course_content/xtmpl/xtmpl_course_comment_lists"%>
 <script>
 	$(document).ready(function(){
+		var cd_id = window.location.pathname.split("/")[2];
+		// course-info toggle		
+		$('.old-course').hide();
+		$('.see-more-course').click(function(){
+			$('.old-course').toggle();
+			$(this).find('.fa').toggleClass("fa-search-minus");
+		});	
+			
+		// charts
+		$.getJSON("/course_content/get_course_info.json?cd_id=<%=@data[:course_detail_id]%>&content=chart", function (data) {		
+			show_chart_reg(data);
+			show_chart_score(data);
+			if(!(data.show_reg || data.show_score))
+				$('#statistics-header').append(' 無資料');
+		});	
 		
-		$("#compare").load("/courses/get_compare?c_id=<%=@course.id%>", function() {
+		// course content head 
+		$.getJSON("/course_content/get_course_info.json?cd_id=<%=@data[:course_detail_id]%>&content=content_head", function (data) {		
+				//console.log(data);
+				$("#course_content_head").html(tmpl("content-head", data));
+				head_binding(<%=j (current_user) ? "true" : "false"%>, cd_id);			
+		});	
+		
+		// course content lists
+		$.getJSON("/course_content/get_course_info.json?cd_id="+cd_id+"&content=content_lists", function (data) {		
+				//console.log(data);
+				$('#course_content_lists').html(tmpl("content-lists", data));
+				lists_binding(<%=j (current_user) ? "true" : "false"%>, cd_id);			
+		});
+		
+		// course comments
+		$.getJSON("/course_content/get_course_info.json?cd_id="+cd_id+"&content=course_comments", function (data) {		
+			  //console.log(data);
+			  $('#comments').html(tmpl("course-comments", data));
+			  comment_binding(cd_id);
+		});
+		
+		//teacher compare & rank
+		$("#compare").load("/course_content/get_compare?c_id=<%=j @data[:course_id]%>", function() {
 			$('body').scrollspy('refresh');
-			$("#discuss").load("/discusses/list_by_course?ct_id=<%=@ct.id%>&target=<%=params[:target]%>", function() {
+			$("#discuss").load("/discusses/list_by_course?ct_id=<%=@data[:course_teachership_id]%>&target=<%=params[:target]%>", function() {
 				$('body').scrollspy('refresh');
-				$("#files").load("/file_infos/list_by_ct?ct_id=<%=@ct.id%>", function() {
+				$("#files").load("/file_infos/list_by_ct?ct_id=<%=@data[:course_teachership_id]%>", function() {
 					$('body').scrollspy('refresh');
 					$('body').scrollTo("#course-name",10,{offset:-80});
 					<% if params[:first_show]=="discussion" %>
@@ -80,11 +169,11 @@
 				});
 			});
 		});
-
-			
-		<% share_url="#{root_url}courses/#{@ct.id}" %>
+	
+		// FB share	
+		<% share_url="#{root_url}courses/#{@data[:course_detail_id]}" %>
 		var share_url='<%=j share_url.html_safe %>';
-		var course_title="<%= @course.ch_name %> <%=@ct.teacher_name%>";
+		var course_title="<%= @data[:course_name] %> <%=@data[:course_teachers]%>";
 		new Share(".share-course",{
 			ui: {
 				flyout: "bottom center",
@@ -115,8 +204,7 @@
 				}
 			},
 		});
-		
-		$('.svg-inject').svgInject();
+
 	});
 
 </script>
