--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,16 +1,27 @@
-<table class="table">
-<tr><th>中文系名</th><th>管理</th></tr>
-<% @departments.each do |department| %>
-  <tr>
-  
-  <td><%= link_to department.ch_name, department_path(department) %></td>
-
-  <td>
-    <%= link_to 'edit', edit_department_path(department) %>
-    <% link_to 'delete', department_path(department), :method => :delete %>
-  </td>
+<div class="panel">
+<table class="table table-bordered">
+	<tr class="row">
+	<th>系名</th>
+	<th>degree</th>
+	<th>院</th>
+	<th>有開課</th>
+	<th>可主修</th>
+	<th>管理</th>
+	</tr>
+<% @departments.includes(:college).each do |dept| %>
+  <tr class="row">
+		<td><%= link_to dept.ch_name, department_path(dept) %></td>
+		<td><%=dept.degree%></td>
+		
+		<td><%=dept.college.try(:name)%></td>
+		<td><%=dept.has_courses%></td>
+		<td><%=dept.majorable%></td>
+		<td>
+			<%= link_to 'edit', edit_department_path(dept) %>
+			<% link_to 'delete', department_path(dept), :method => :delete %>
+		</td>
   <tr>
 <% end %>
 </table>
-
+</div>
 <%= link_to 'new department', new_department_path %>
